# dry-scraper

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  game_plan.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: aigb4zi8k3r3vy83h6bbsqgwacgb105y-source  k23jmhkb3pasdd6bhka22mm5n8dm1lkk-source
.github/workflows/: ci.yml
migrations/: 01_create_api_cache.sql  01_create_data_source_error.sql  02_create_api_cache.sql  02_create_nhl_season.sql  03_create_nhl_franchise.sql  03_create_nhl_season.sql  04_create_nhl_franchise.sql  04_create_nhl_team.sql  05_create_nhl_player.sql  05_create_nhl_team.sql  06_create_nhl_game.sql  06_create_nhl_player.sql  07_create_nhl_game.sql  07_create_nhl_playoff_series.sql  07_create_nhl_roster_spot.sql  08_create_nhl_play.sql  08_create_nhl_roster_spot.sql  09_create_nhl_play.sql  10_create_nhl_shift.sql  11_create_nhl_playoff_bracket_series.sql  11_create_nhl_playoff_series.sql  12_create_nhl_playoff_series.sql  13_create_nhl_playoff_series_game.sql  14_add_world_cup_game_type.sql
src/: any_primary_key.rs  api.rs  config.rs  lib.rs  lp_error.rs  main.rs  orchestrator.rs  serde_helpers.rs  util.rs
src/api/: api_common.rs  cacheable.rs  cacheable_api.rs  mod.rs  nhl.rs  nhl_stats_api.rs  nhl_web_api.rs
src/api/nhl/: mod.rs  nhl_api.rs  nhl_stats_api.rs  nhl_web_api.rs
src/common/: any_primary_key.rs  app_context.rs  data_source.rs  errors.rs  mod.rs  rate_limiter.rs  serde_helpers.rs  util.rs
src/common/api/: api_common.rs  cacheable_api.rs  mod.rs
src/common/db/: db_entity.rs  fk_helpers.rs  fk_resolver.rs  init.rs  mod.rs  persistable.rs  worker.rs
src/common/models/: api_cache.rs  data_source_error.rs  item_parsed_with_context.rs  mod.rs  traits.rs
src/common/progress/: mod.rs
src/config/: cli_args.rs  env.rs  env_vars.rs  mod.rs
src/data_sources/: mod.rs
src/data_sources/nhl/: data_source.rs  mod.rs  orchestrator.rs  primary_key.rs
src/db/: init.rs  mod.rs  persistable.rs  worker.rs
src/models/: api_cache.rs  game_type.rs  item_parsed_with_context.rs  mod.rs  nhl_franchise.rs  nhl_game.rs  nhl_player.rs  nhl_playoff_series.rs  nhl_season.rs  nhl_team.rs  period_type.rs  traits.rs
src/models/nhl/: common.rs  franchise.rs  game.rs  mod.rs  nhl_franchise.rs  nhl_game.rs  nhl_model_common.rs  nhl_play.rs  nhl_player.rs  nhl_playoff_series.rs  nhl_roster_spot.rs  nhl_season.rs  nhl_team.rs  play.rs  player.rs  playoff_series.rs  primary_key.rs  roster_spot.rs  season.rs  team.rs
(+18 files in other folders)
