[package]
name = "loserpoint"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = {version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
indicatif = "0.18.0"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = { version = "0.12.20", features = ["json"]}
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "json", "chrono" ] }
thiserror = "2.0.12"
tokio = { version = "1.45.1",  features = ["full"]}
tokio-retry = "0.3.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
serial_test = "3.2.0"
