[package]
name = "dry-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
chrono = {version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
console-subscriber = "0.5.0"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
indicatif = "0.18.3"
once_cell = "1.21.3"
rand = "0.9.2"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["json"]}
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "json", "chrono" ] }
thiserror = "2.0.18"
tokio = { version = "1.49.0",  features = ["full"]}
tokio-retry = "0.3.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
serial_test = "3.3.1"
