[package]
name = "dry-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
chrono = {version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.0"
clap = { version = "4.5.54", features = ["derive"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
governor = "0.6.3"
indicatif = "0.18.3"
once_cell = "1.21.3"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["json"]}
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "json", "chrono" ] }
thiserror = "2.0.18"
tokio = { version = "1.49.0",  features = ["full"] }
tokio-util = "0.7"
tokio-retry = "0.3.0"
tracing = "0.1.44"
tracing-indicatif = "0.3.7"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
serial_test = "3.3.1"
console-subscriber = "0.5.0"
